<resources>
    <string name="app_name">Hire Hand</string>
    <string name="illustration">Illustration</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logo">Logo</string>
    <string name="logo_bg">Logo BG</string>
    <string name="submit">Submit</string>
    <string name="company_name">Company Name</string>
    <string name="job_position">Job Position</string>
    <string name="hire_hand">Hire Hand</string>
    <string name="who_are_you">Who are you?</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="referrer">Referrer</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="save">Save</string>
    <string name="view_profile">View Profile</string>
    <string name="resume_received">Resume Received</string>
    <string name="user">user</string>
    <string name="software_tester">Software Tester</string>
    <string name="add_job_opening">Add Job Opening</string>
    <string name="resume_link">Resume Link</string>
</resources>