<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="370dp"
    android:layout_height="150dp"
    android:layout_marginLeft="11dp"
    app:cardBackgroundColor="#c0ace4"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.512"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.232">

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/user"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="25dp"
        android:text="@string/your_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="65dp"
        android:text="@string/software_tester"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/d1"
        android:layout_width="61dp"
        android:layout_height="60dp"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="25dp"
        android:background="#c0ace4"
        android:scaleX="1.7"
        android:scaleY="1.2"
        app:srcCompat="@android:drawable/stat_sys_download" />

</androidx.cardview.widget.CardView>
