<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReferrerScreen">

    <ImageButton
        android:id="@+id/simpleImageButton"
        android:layout_width="114dp"
        android:layout_height="93dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/account_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/view_profile" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="660dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="186dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="205dp"
        android:text="@string/resume_received"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="383dp"
        android:layout_height="171dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#c0ace4"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553">

        <ImageView
            android:id="@+id/user_img1"
            android:layout_width="82dp"
            android:layout_height="87dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/user" />

        <TextView
            android:id="@+id/user_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="25dp"
            android:text="@string/your_name"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_des1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="65dp"
            android:text="@string/software_tester"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="383dp"
        android:layout_height="171dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#c0ace4"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83">

        <ImageView
            android:id="@+id/user_img2"
            android:layout_width="82dp"
            android:layout_height="87dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/user" />

        <TextView
            android:id="@+id/user_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="25dp"
            android:text="@string/your_name"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_des2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="65dp"
            android:text="@string/software_tester"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="383dp"
        android:layout_height="171dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#c0ace4"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271">

        <ImageView
            android:id="@+id/user_img3"
            android:layout_width="82dp"
            android:layout_height="87dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/user" />

        <TextView
            android:id="@+id/user_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="25dp"
            android:text="@string/your_name"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_des3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginTop="65dp"
            android:text="@string/software_tester"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/simpleImageButton2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="-80dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/add_job_opening"
        android:padding="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/add_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>