<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobOpeningActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/job_position"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/company_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <EditText
        android:id="@+id/companyName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shadow"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/company_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/jobPosition"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:elevation="6dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/job_position"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lilac_dark"
        android:fontFamily="@font/roboto"
        android:padding="14dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobPosition"
        app:layout_constraintVertical_bias="0.126" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        app:srcCompat="@drawable/black_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>