<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="236dp"
        android:layout_height="179dp"
        android:backgroundTint="@color/lilac_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        app:srcCompat="@drawable/account_circle"
        tools:ignore="ContentDescription,MissingConstraints,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:background="@drawable/shadow"
        android:elevation="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/your_name"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.9"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="Job Position"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:background="@drawable/shadow"
        android:elevation="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/job_position"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" />

    <Button
        android:id="@+id/button4"
        android:layout_width="280dp"
        android:layout_height="63dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="@color/lilac_dark"
        android:padding="14dp"
        android:text="@string/save"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
        app:layout_constraintVertical_bias="0.877" />

</androidx.constraintlayout.widget.ConstraintLayout>